[package]
name = "strsim-network"
version = "0.1.0"
authors = ["dweb0"]
edition = "2018"
description = "Calculate string similarity network"
homepage = "https://github.com/dweb0/strsim-network"
repository = "https://github.com/dweb0/strsim-network"
readme = "README.md"
keywords = ["strsim", "network", "string-similarity", "peptide"]
categories = ["command-line-interface"]
license = "MIT/Apache-2.0"
exclude = [
    "/scripts/*", "/data/*",
    "./.travis.yml", "./appveyor.yml",
    "/ci/*", "/docs/*", "/examples/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
cli = ["clap", "indicatif", "colored"]

[[bin]]
name = "strsim-network"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
strsim = "0.9.3"
rayon = "1.3.0"
failure = "0.1.6"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
clap = { version = "2.33.0", optional = true }
colored = {  version = "1.9.2", optional = true }
indicatif = { version = "0.13.0", optional = true }
fst = "0.3.5"
fst-levenshtein = "0.2.1"
